[project]
name = "resume-builder"
version = "0.1.0"
description = "A no nonsense tool to build resumes in pure Python."
authors = [
    { name = "koek67", email = "krishnan.koushik@gmail.com" },
    { name = "Samuel Hoover", email = "56448170+samuelhoover@users.noreply.github.com" },
    { name = "MRDGH2821", email = "ask.mrdgh2821@outlook.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.7"
license = { file = "LICENCE.txt" }

[dependency-groups]
dev = ["ruff>=0.12.1"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"
