[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "resume-builder"
version = "0.1.0"

description = "A no nonsense tool to build resumes in pure Python."
readme = "README.md"
keywords = ["builder", "cv", "generator", "html", "library", "resume"]
license = "MIT"
license-files = ["LICENCE.txt"]
authors = [
    { email = "56448170+samuelhoover@users.noreply.github.com", name = "Samuel Hoover" },
    { email = "ask.mrdgh2821@outlook.com", name = "MRDGH2821" },
    { email = "krishnan.koushik@gmail.com", name = "koek67" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
]
dependencies = []
urls.Documentation = "https://github.com/koek67/resume-builder#readme"
urls.Homepage = "https://github.com/koek67/resume-builder"
urls.Issues = "https://github.com/koek67/resume-builder/issues"
urls.Repository = "https://github.com/koek67/resume-builder"

[dependency-groups]
dev = ["mypy>=1.4.1", "ruff>=0.12.1"]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
src = "resume_builder"

[tool.ruff]
format.line-ending = "lf"
lint.select = ["ALL"]
lint.fixable = ["ALL"]
lint.pydocstyle.convention = "google"
